src/main/metadata/objects/Region_City_Mapping__c.object
<CustomObject>
    <description>The mapping between region, mb sub-region, smart sub-region and city cn</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City name in chinese</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MB_Sub_Region__c</fullName>
        <label>MB Sub-Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Sub_Region__c</fullName>
        <label>smart Sub-Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Region City Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Region__c</columns>
        <columns>MB_Sub_Region__c</columns>
        <columns>Smart_Sub_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RCM-{000000}</displayFormat>
        <label>Region City Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region City Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>